--- a/app/templates/create_appbanco.html
+++ b/app/templates/create_appbanco.html
@@ -32,7 +32,7 @@
                         document.getElementById('id_uf').disabled = true;
                         document.getElementById('id_numero').disabled = true;
                     } else {
-                        document.getElementById('id_endereco').value = data.endereco;
+                        document.getElementById('id_endereco').value = data.logradouro;
                         document.getElementById('id_bairro').value = data.bairro;
                         document.getElementById('id_localidade').value = data.localidade;
                         document.getElementById('id_uf').value = data.uf;
