--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,11 @@
     </style>
 </head>
 <body>
+
     <h1>Equipe KB</h1>
-    <h2>Obrigado por participar!</h2>
+
+    <h1>CADASTRO EFETUADO COM SUCESSO!</h1>
+    <h1>OBRIGADO!</h1>
+
 </body>
 </html>
