--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,12 @@
     </style>
 </head>
 <body>
-    <h1>Equipe KB</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <h1>Equipe KAIO BRAZÃO</h1>
     <h1>CADASTRO EFETUADO COM SUCESSO!</h1>
     <h1>OBRIGADO!</h1>
 </body>
