--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,17 +16,32 @@
         h2 {
             color: #555;
         }
+        .button {
+            background-color: #4CAF50; /* Verde */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        .button:hover {
+            background-color: #45a049; /* Verde mais escuro */
+        }
     </style>
 </head>
 <body>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <br><br><br><br><br>
     <h1>Equipe KAIO BRAZÃO</h1>
-	<br>
+    <br>
     <h1>CADASTRO EFETUADO COM SUCESSO!</h1>
     <h1>OBRIGADO!</h1>
+    <br><br>
+    <!-- Botão para redirecionar para /app/appbanco -->
+    <a href="/app/appbanco" class="button">Voltar para Cadastro</a>
 </body>
 </html>
