--- a/app/templates/relatorio_dados.html
+++ b/app/templates/relatorio_dados.html
@@ -48,6 +48,7 @@
                 <th>Bairro</th>
                 <th>Data de Cadastro</th>
                 <th>Concorda WhatsApp?</th>
+                <th>Liderança</th>
             </tr>
         </thead>
         <tbody id="table-body">
@@ -58,6 +59,7 @@
                 <td>{{ dado.bairro }}</td>
                 <td>{{ dado.datacadastro }}</td>
                 <td>{{ dado.concorda_whatsapp }}</td>
+                <td>{{ dado.lideranca }}</td>
             </tr>
             {% endfor %}
         </tbody>
