--- a/app/templates/relatorio_dados.html
+++ b/app/templates/relatorio_dados.html
@@ -45,7 +45,12 @@
             <tr>
                 <th>Nome</th>
                 <th>Celular</th>
+                <th>Cep</th>
                 <th>Bairro</th>
+                <th>Endereço</th>
+                <th>Complemento</th>
+                <th>Numero</th>
+                <th>Municipio</th>
                 <th>Data de Cadastro</th>
                 <th>Concorda WhatsApp?</th>
                 <th>Liderança</th>
@@ -56,7 +61,11 @@
             <tr>
                 <td>{{ dado.nome }}</td>
                 <td>{{ dado.celular }}</td>
+                <td>{{ dado.cep }}</td>
                 <td>{{ dado.bairro }}</td>
+                <td>{{ dado.endereco }}</td>
+                <td>{{ dado.numero }}</td>
+                <td>{{ dado.localidade }}</td>
                 <td>{{ dado.datacadastro }}</td>
                 <td>{{ dado.concorda_whatsapp }}</td>
                 <td>{{ dado.lideranca }}</td>
