--- a/app/templates/create_appbanco.html
+++ b/app/templates/create_appbanco.html
@@ -102,7 +102,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Equipe KAIO BRAZÃO</h1>
+        <h1>Equipe DOCA</h1>
         <h2>Seja mais um nessa luta!</h2>
         <form id="formSalvar" method="post" class="needs-validation" novalidate>
             {% csrf_token %}
