--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <br><br><br><br><br>
-    <h1>Equipe KAIO BRAZÃO</h1>
+    <h1>Equipe DOCA</h1>
     <br>
     <h1>CADASTRO EFETUADO COM SUCESSO!</h1>
     <h1>OBRIGADO!</h1>
