--- a/app/templates/relatorio_dados.html
+++ b/app/templates/relatorio_dados.html
@@ -51,6 +51,7 @@
                 <th>Complemento</th>
                 <th>Numero</th>
                 <th>Municipio</th>
+                <th>Data de Nascimento</th>
                 <th>Data de Cadastro</th>
                 <th>Concorda WhatsApp?</th>
                 <th>Liderança</th>
@@ -66,6 +67,7 @@
                 <td>{{ dado.endereco }}</td>
                 <td>{{ dado.numero }}</td>
                 <td>{{ dado.localidade }}</td>
+                <td>{{ dado.datanascimento }}</td>
                 <td>{{ dado.datacadastro }}</td>
                 <td>{{ dado.concorda_whatsapp }}</td>
                 <td>{{ dado.lideranca }}</td>
