--- a/app/templates/create_appbanco.html
+++ b/app/templates/create_appbanco.html
@@ -76,7 +76,7 @@
         $(document).ready(function(){
             $('#id_celular').mask('(00) 00000-0000');
             $('#id_cep').mask('00000-000');
-            $('#id_datanascimento').mask('00/00/0000');
+            $('#id_data_nascimento').mask('00/00/0000');
             document.getElementById('id_endereco').disabled = true;
             document.getElementById('id_bairro').disabled = true;
             document.getElementById('id_localidade').disabled = true;
@@ -103,7 +103,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Equipe DOCA</h1>
+        <h1>Equipe KB</h1>
         <h2>Seja mais um nessa luta!</h2>
         <form id="formSalvar" method="post" class="needs-validation" novalidate>
             {% csrf_token %}
@@ -117,7 +117,6 @@
                         <td>{{ form.celular.label_tag }}</td>
                         <td>{{ form.celular }}</td>
                     </tr>
-
                     <tr>
                         <td>{{ form.cep.label_tag }}</td>
                         <td>{{ form.cep }}</td>
@@ -145,15 +144,14 @@
                         <td>{{ form.numero.label_tag }}</td>
                         <td>{{ form.numero }}</td>
                     </tr>
-					<tr>
-						<td>{{ form.datanascimento.label_tag }}</td>
-						<td><input type="text" id="id_datanascimento" name="datanascimento" class="form-control" placeholder="DD/MM/AAAA"></td>
-					</tr>
-					<tr>
+                    <tr>
+                        <td>{{ form.data_nascimento.label_tag }}</td>
+                        <td><input type="text" id="id_data_nascimento" name="data_nascimento" class="form-control" placeholder="DD/MM/AAAA"></td>
+                    </tr>
+                    <tr>
                         <td>{{ form.lideranca.label_tag }}</td>
                         <td>{{ form.lideranca }}</td>
                     </tr>
-                    <!-- Adicione mais campos conforme necessário -->
                     <tr>
                         <td colspan="2">
                             <div class="form-check">
