--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Equipe KB</title>
+    <title>Equipe VAVAL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +36,7 @@
 </head>
 <body>
     <br><br><br><br><br>
-    <h1>Equipe KB</h1>
+    <h1>Equipe VAVAL</h1>
     <br>
     <h1>CADASTRO EFETUADO COM SUCESSO!</h1>
     <h1>OBRIGADO!</h1>
