--- a/app/templates/create_appbanco.html
+++ b/app/templates/create_appbanco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe KB</title>
+    <title>Equipe VAVAL</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -103,7 +103,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Equipe KB</h1>
+        <h1>Equipe VAVAL</h1>
         <h2>Seja mais um nessa luta!</h2>
         <form id="formSalvar" method="post" class="needs-validation" novalidate>
             {% csrf_token %}
